--- a/.binstar.yml
+++ b/.binstar.yml
@@ -8,7 +8,7 @@ after_success:
   - echo "ProtoCI build success."
 
 before_script:
-  - conda install -c psteinberg conda-build protoci
+  - conda install -c psteinberg conda-build=1.20 protoci=0.0.41
 
 engine:
   - python=2.7
