--- a/recipes/umi_tools/meta.yaml
+++ b/recipes/umi_tools/meta.yaml
@@ -1,23 +1,22 @@
 package:
     name: umi_tools
-    version: 0.0.3
+    version: 0.0.8
 
 source:
-    fn: umi_tools-0.0.3.tar.gz
-    url: https://pypi.python.org/packages/source/u/umi_tools/umi_tools-0.0.3.tar.gz
-    md5: c7c4af43e1f7a01402b839dae719ab89
+    fn: 0.0.8.tar.gz
+    url: https://github.com/CGATOxford/UMI-tools/archive/0.0.8.tar.gz
 
 build:
-    number: 1
+    number: 0
     skip: False
 
 requirements:
     build:
         - gcc  # [linux]
         - llvm # [osx]
-        - cython
         - python
-        - pysam ==0.8.4
+        - cython
+        - pysam >=0.8.4
         - setuptools
 
     run:
@@ -27,15 +26,17 @@ requirements:
         - bcftools ==1.3
         - python
         - cython >=0.19
-        - pysam ==0.8.4
+        - pysam >=0.8.4
         - numpy >=1.7
-        - pandas >=0.8.4
-        - future
-
+        - pandas >=0.12.0
+        - future 
+        - setuptools
 test:
 
     commands:
         - umi_tools --help
+        - umi_tools extract --help
+        - umi_tools dedup --help
 
 about:
     home: https://github.com/CGATOxford/UMI-tools
